aks-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-server-github
  labels:
    app: python-server-app
spec:
  selector:
    matchLabels:
        app: python-server-app
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-server-app
    spec:
      containers:
        - name: python-server-app
          image: pcgithub.azurecr.io/pythonserver:fcd44ccc289fea9a65980d53db5a8972247b124a
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
