deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-server-github
  labels:
    app: python-server-app
spec:
  selector:
    matchLabels:
        app: python-server-app
  replicas: 4
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-server-app
      containers:
        - name: python-server-app
          image: us.gcr.io/schandu/python_script/python-script@sha256:c46972ea4daf14624334e7083d4222a7a68987426fd4376b09637d2cd57615b2
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
