gke-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-server-github
  labels:
    app: python-server-app
spec:
  selector:
    matchLabels:
        app: python-server-app
  replicas: 4
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: python-server-app
    spec:
      containers:
        - name: python-server-app
          image: demo-image-name
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
