gke-lb.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: python-server-app
  name: python-server-app-svc
  annotations:
    cloud.google.com/neg: '{"ingress": false}'
spec:
  ports:
  - name: python-server-app-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: python-server-app
  type: ClusterIP
status:
  loadBalancer: {}
